# backend/admin/internal/services/orm/query/sys_resource_menu_extend.gen.go
@@ -1,0 +1,212 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package query
+
+import (
+	"admin/internal/services/orm/models"
+	"errors"
+	"go.uber.org/zap"
+	"gorm.io/gorm"
+	paginationV1 "orm-crud/api/gen/go/pagination/v1"
+	"orm-crud/gormc"
+	paginationFilter "orm-crud/pagination/filter"
+)
+
+func (sysResourceMenu) count(whereSelectors []func(*gorm.DB) *gorm.DB) (int64, error) {
+	if Q.db == nil {
+		return 0, errors.New("db is nil")
+	}
+	countDB := Q.db.Model(new(models.SysResourceMenu))
+	for _, s := range whereSelectors {
+		if s != nil {
+			countDB = s(countDB)
+		}
+	}
+	var cnt int64
+	if err := countDB.Count(&cnt).Error; err != nil {
+		zap.S().Errorf("query count failed: %s", err.Error())
+		return 0, errors.New("query count failed")
+	}
+	return cnt, nil
+}
+
+// PageWithPaging 使用 PagingRequest 查询列表
+func (s sysResourceMenu) PageWithPaging(req *paginationV1.PagingRequest) (*gormc.PagingResult[models.SysResourceMenu], error) {
+	if req == nil {
+		return nil, errors.New("paging request is nil")
+	}
+	if Q.db == nil {
+		return nil, errors.New("db is nil")
+	}
+
+	var err error
+	var whereSelectors []func(*gorm.DB) *gorm.DB
+	var selectSelector func(*gorm.DB) *gorm.DB
+	var sortingSelector func(*gorm.DB) *gorm.DB
+	var pagingSelector func(*gorm.DB) *gorm.DB
+
+	var filterExpr *paginationV1.FilterExpr
+	filterExpr, err = paginationFilter.ConvertFilterByPagingRequest(req)
+	if err != nil {
+		zap.S().Errorf("convert filter string to filter expr failed: %s", err.Error())
+		return nil, err
+	}
+	req.FilteringType = &paginationV1.PagingRequest_FilterExpr{FilterExpr: filterExpr}
+
+	whereSelectors, err = structuredFilter.BuildSelectors(req.GetFilterExpr())
+	if err != nil {
+		zap.S().Errorf("build structured filter selectors failed: %s", err.Error())
+	}
+
+	if req.GetFieldMask() != nil && len(req.GetFieldMask().Paths) > 0 {
+		selectSelector, err = fieldSelector.BuildSelector(req.GetFieldMask().GetPaths())
+		if err != nil {
+			zap.S().Errorf("build field select selector failed: %s", err.Error())
+		}
+	}
+
+	if len(req.GetOrderBy()) > 0 {
+		var sortings []*paginationV1.Sorting
+		sortings, err = orderByStringConverter.Convert(req.GetOrderBy())
+		if err != nil {
+			zap.S().Errorf("convert order by string to sorting failed: %s", err.Error())
+			return nil, err
+		}
+		sortingSelector = structuredSorting.BuildScope(sortings)
+	} else if len(req.GetSorting()) > 0 {
+		sortingSelector = structuredSorting.BuildScope(req.GetSorting())
+	}
+
+	if !req.GetNoPaging() {
+		if req.Page != nil && req.PageSize != nil {
+			pagingSelector = pagePaginator.BuildDB(int(req.GetPage()), int(req.GetPageSize()))
+		} else if req.Offset != nil && req.Limit != nil {
+			pagingSelector = offsetPaginator.BuildDB(int(req.GetOffset()), int(req.GetLimit()))
+		} else if req.Token != nil && req.Offset != nil {
+			pagingSelector = tokenPaginator.BuildDB(req.GetToken(), int(req.GetOffset()))
+		}
+	}
+
+	listDB := Q.db.Model(new(models.SysResourceMenu))
+	for _, w := range whereSelectors {
+		if w != nil {
+			listDB = w(listDB)
+		}
+	}
+	if selectSelector != nil {
+		listDB = selectSelector(listDB)
+	}
+	if sortingSelector != nil {
+		listDB = sortingSelector(listDB)
+	}
+	if pagingSelector != nil {
+		listDB = pagingSelector(listDB)
+	}
+
+	var entities []*models.SysResourceMenu
+	if err = listDB.Find(&entities).Error; err != nil {
+		return nil, err
+	}
+
+	total, err := s.count(whereSelectors)
+	if err != nil {
+		return nil, err
+	}
+
+	return &gormc.PagingResult[models.SysResourceMenu]{
+		Items: entities,
+		Total: uint64(total),
+	}, nil
+}
+
+// PageWithPagination 使用 PaginationRequest 查询列表
+func (s sysResourceMenu) PageWithPagination(req *paginationV1.PaginationRequest) (*gormc.PagingResult[models.SysResourceMenu], error) {
+	if req == nil {
+		return nil, errors.New("pagination request is nil")
+	}
+	if Q.db == nil {
+		return nil, errors.New("db is nil")
+	}
+
+	var err error
+	var whereSelectors []func(*gorm.DB) *gorm.DB
+	var selectSelector func(*gorm.DB) *gorm.DB
+	var sortingSelector func(*gorm.DB) *gorm.DB
+	var pagingSelector func(*gorm.DB) *gorm.DB
+
+	var filterExpr *paginationV1.FilterExpr
+	filterExpr, err = paginationFilter.ConvertFilterByPaginationRequest(req)
+	if err != nil {
+		zap.S().Errorf("convert filter string to filter expr failed: %s", err.Error())
+		return nil, err
+	}
+	req.FilteringType = &paginationV1.PaginationRequest_FilterExpr{FilterExpr: filterExpr}
+
+	whereSelectors, err = structuredFilter.BuildSelectors(req.GetFilterExpr())
+	if err != nil {
+		zap.S().Errorf("build structured filter selectors failed: %s", err.Error())
+	}
+
+	if req.GetFieldMask() != nil && len(req.GetFieldMask().Paths) > 0 {
+		selectSelector, err = fieldSelector.BuildSelector(req.GetFieldMask().GetPaths())
+		if err != nil {
+			zap.S().Errorf("build field select selector failed: %s", err.Error())
+		}
+	}
+
+	if len(req.GetOrderBy()) > 0 {
+		var sortings []*paginationV1.Sorting
+		sortings, err = orderByStringConverter.Convert(req.GetOrderBy())
+		if err != nil {
+			zap.S().Errorf("convert order by string to sorting failed: %s", err.Error())
+			return nil, err
+		}
+		sortingSelector = structuredSorting.BuildScope(sortings)
+	} else if len(req.GetSorting()) > 0 {
+		sortingSelector = structuredSorting.BuildScope(req.GetSorting())
+	}
+
+	switch req.GetPaginationType().(type) {
+	case *paginationV1.PaginationRequest_OffsetBased:
+		pagingSelector = offsetPaginator.BuildDB(int(req.GetOffsetBased().GetOffset()), int(req.GetOffsetBased().GetLimit()))
+	case *paginationV1.PaginationRequest_PageBased:
+		pagingSelector = pagePaginator.BuildDB(int(req.GetPageBased().GetPage()), int(req.GetPageBased().GetPageSize()))
+	case *paginationV1.PaginationRequest_TokenBased:
+		pagingSelector = tokenPaginator.BuildDB(req.GetTokenBased().GetToken(), int(req.GetTokenBased().GetPageSize()))
+	}
+
+	listDB := Q.db.Model(new(models.SysResourceMenu))
+	for _, s := range whereSelectors {
+		if s != nil {
+			listDB = s(listDB)
+		}
+	}
+	if selectSelector != nil {
+		listDB = selectSelector(listDB)
+	}
+	if sortingSelector != nil {
+		listDB = sortingSelector(listDB)
+	}
+	if pagingSelector != nil {
+		listDB = pagingSelector(listDB)
+	}
+
+	var entities []*models.SysResourceMenu
+	if err = listDB.Find(&entities).Error; err != nil {
+		zap.S().Errorf("query list failed: %s", err.Error())
+		return nil, errors.New("query list failed")
+	}
+
+	total, err := s.count(whereSelectors)
+	if err != nil {
+		zap.S().Errorf("count query failed: %s", err.Error())
+		return nil, err
+	}
+
+	return &gormc.PagingResult[models.SysResourceMenu]{
+		Items: entities,
+		Total: uint64(total),
+	}, nil
+}
